<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <include layout="@layout/include_widget_title"/>

    <ImageView
        android:id="@+id/captured_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/focus_max_image_preview_height"
        android:scaleType="fitCenter"
        android:contentDescription="@string/captured_image"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/view"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/delete"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/button_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_a_picture"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>

</LinearLayout>