<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/include_widget_title"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_logitude"
            style="@style/FocusText.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"/>

        <TextView
            android:id="@+id/text_longitude_value"
            style="@style/FocusText.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_latitude"
            style="@style/FocusText.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"/>

        <TextView
            android:id="@+id/text_latitude_value"
            style="@style/FocusText.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_accuracy"
            style="@style/FocusText.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accuracy"/>

        <TextView
            android:id="@+id/text_accuracy_value"
            style="@style/FocusText.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_gps_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_position"/>

</LinearLayout>