<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1.0">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.05"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:src="@drawable/focus_logo"
        android:contentDescription="@string/caption_focus_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".3"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:orientation="vertical">

            <TextView
                style="@style/FocusText.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_demo_label_select_use_case" />

            <Spinner
                android:id="@+id/login_demo_field_select_use_case"
                style="@style/FocusSpinner.Big" />

            <Button
                android:id="@+id/login_demo_button_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickStartDemo"
                android:text="@string/start_demo"
                />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".3"/>
    </LinearLayout>


</LinearLayout>